[project]
name = "learning_litestar"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Diego Alvarez S.", email = "dialvarezs@gmail.com"},
]
dependencies = [
    "litestar[standard]>=2.9.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
