[project]
name = "learning_litestar"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Diego Alvarez S.", email = "dialvarezs@gmail.com"},
]
dependencies = [
    "litestar[sqlalchemy,standard]>=2.9.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
